# Orbital

./: .gitignore  README.md  pyproject.toml
data/: calendar.ics  schedule.yaml
orbital/: __init__.py  cli.py
orbital/core/: compute.py  loader.py  schema.py
orbital/export/: ics.py  widget_state.py
orbital/sync/: git_push.py
tests/: test_compute.py
widget/: shell.qml
widget/components/: AppState.qml  CountdownRibbon.qml  EnergyBar.qml  Heatmap.qml  NowStrip.qml  OrbitalPanel.qml  TaskCard.qml  Theme.qml  qmldir
