[project]
name = "orbital"
version = "0.1.0"
description = "Physics student workload cockpit"
requires-python = ">=3.12"
dependencies = [
    "icalendar>=7.1.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
orbital = "orbital.cli:app"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = ["pytest>=8.0"]
